SERVER-66849 Error labels should account for cluster abort and commit commands

(cherry picked from commit 6670518c902d4cef237bb3539da85a75eaa69fe7)